--- a/app/src/main/res/layout/activity_signup2.xml
+++ b/app/src/main/res/layout/activity_signup2.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="3sp"
         android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:weightSum="4">
@@ -56,24 +56,24 @@
 
 
             <TextView
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="40sp"
                 android:layout_width="match_parent"
                 android:text="Welcome"
-                android:textSize="25dp"
-                android:paddingLeft="30dp"
+                android:textSize="25sp"
+                android:paddingLeft="30sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/welcome"/>
 
 
             <Spinner
                 android:id="@+id/body_type"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -81,27 +81,26 @@
                 android:id="@+id/other_bodytype"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:ems="10"
                 android:hint="If Other, type here"
                 android:textColorHint="#ffffff"
                 android:background="@drawable/box2"
-                android:inputType="textMultiLine"
-                />
+                android:inputType="textMultiLine" />
 
             <Spinner
                 android:id="@+id/hair_color"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -109,11 +108,11 @@
                 android:id="@+id/other_haircolor"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
@@ -126,13 +125,13 @@
 
             <Spinner
                 android:id="@+id/hair_length"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -140,11 +139,11 @@
                 android:id="@+id/other_hairlength"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
@@ -157,13 +156,13 @@
 
             <Spinner
                 android:id="@+id/eye_color"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -171,11 +170,11 @@
                 android:id="@+id/other_eyecolor"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
@@ -188,14 +187,14 @@
 
             <Spinner
                 android:id="@+id/skin_tone"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
 
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="60dp"
+                android:layout_height="60sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -203,11 +202,11 @@
                 android:id="@+id/other_skintone"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
@@ -219,13 +218,13 @@
 
             <Spinner
                 android:id="@+id/facial_hair"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="20sp"
                 android:background="@drawable/box"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:popupBackground="@drawable/box_spin"
                 android:layout_gravity="center"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp" />
 
@@ -233,11 +232,11 @@
                 android:id="@+id/other_facialhair"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="32sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
@@ -251,15 +250,15 @@
                 android:id="@+id/height"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="25sp"
                 android:ems="10"
                 android:hint="Height"
                 android:textColorHint="#ffffff"
@@ -273,15 +272,15 @@
                 android:id="@+id/weight"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="25sp"
                 android:ems="10"
                 android:hint="Weight"
                 android:textColorHint="#ffffff"
@@ -292,15 +291,15 @@
             <EditText
                 android:id="@+id/hip_size"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="25sp"
                 android:ems="10"
                 android:hint="Hip Size"
                 android:textColorHint="#ffffff"
@@ -310,15 +309,15 @@
             <EditText
                 android:id="@+id/chest_size"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="25sp"
                 android:ems="10"
                 android:hint="Chest Size"
                 android:textColorHint="#ffffff"
@@ -329,16 +328,16 @@
                 android:id="@+id/waist_size"
 
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="16sp"
                 android:layout_marginRight="16sp"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                android:paddingLeft="20sp"
                 android:layout_gravity="center"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginTop="25sp"
+                android:layout_marginBottom="60sp"
                 android:ems="10"
                 android:hint="Waist Size"
                 android:textColorHint="#ffffff"
@@ -351,11 +350,11 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_height="40dp"
+        android:layout_marginBottom="5sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:layout_marginTop="5sp"
+        android:layout_height="40sp"
         android:background="@drawable/button_round"
         android:gravity="center"
         android:layout_alignParentBottom="true"
