--- a/app/src/main/res/layout/spin_who.xml
+++ b/app/src/main/res/layout/spin_who.xml
@@ -5,12 +5,12 @@
 
 
     <TextView
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="8sp"
         android:layout_width="match_parent"
         android:id="@+id/spin_text"
         android:textColor="#ffffff"
-        android:paddingLeft="20dp"
-        android:textSize="16dp"
-        android:layout_height="40dp" />
+        android:paddingLeft="20sp"
+        android:textSize="16sp"
+        android:layout_height="40sp" />
 
 </LinearLayout>
