--- a/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
@@ -20,7 +20,7 @@
        android:layout_marginRight="5sp"
        android:layout_marginLeft="5sp"
        android:paddingTop="5sp"
-       android:paddingBottom="5sp" />
+       android:layout_marginTop="10sp" />
 
    </LinearLayout>
 
