--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -18,6 +18,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/splashlogo"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100sp"/>
+
     <LinearLayout
         android:gravity="center"
         android:layout_alignParentLeft="true"
