--- a/app/src/main/res/layout/favs_item.xml
+++ b/app/src/main/res/layout/favs_item.xml
@@ -10,6 +10,8 @@
        android:id="@+id/fav_item"
        android:layout_height="110sp"
        android:layout_width="110sp"
+       android:layout_marginBottom="3sp"
+       android:layout_marginTop="3sp"
        android:scaleType="centerCrop"
        app:riv_corner_radius="10sp"/>
 
