--- a/app/src/main/res/layout/activity_promote_profile_pop_up.xml
+++ b/app/src/main/res/layout/activity_promote_profile_pop_up.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/header_textview"
-        android:text="24 Crafts"
+        android:text="Promote Yourself"
         android:textStyle="bold"
         android:textSize="25sp"
         android:layout_marginBottom="10dp"
@@ -32,9 +32,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Promote Yourself. LET DIRECTORS AND PRODUCERS FIND YOU EASILY. Stand out from the crowd."
+        android:text="LET DIRECTORS AND PRODUCERS FIND YOU EASILY. Stand out from the crowd."
         android:layout_below="@id/Image"
-        android:textSize="18dp"
+        android:textSize="15dp"
         android:id="@+id/Sentence_Text"
         android:layout_marginTop="20dp"/>
 
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="30 coins/day"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
